✨ feat: changed the app name

--- a/app.json
+++ b/app.json
@@ -1,11 +1,11 @@
 {
   "expo": {
-    "name": "app-supermarket",
-    "slug": "app-supermarket",
+    "name": "FindWeather",
+    "slug": "find-weather",
     "version": "1.0.0",
     "assetBundlePatterns": [
       "**/*"
     ]
-  },
-  "name": "app-supermarket"
+   
+  }
 }
