--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "projeto-react-native-inicial",
+  "name": "find-weather",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
