🌈 style: add font

--- a/app.json
+++ b/app.json
@@ -5,7 +5,16 @@
     "version": "1.0.0",
     "assetBundlePatterns": [
       "**/*"
+    ],
+    "plugins": [
+      [
+        "expo-font",
+        {
+          "fonts": ["./src/assets/fonts/Overpass-Bold.ttf", 
+          "./src/assets/fonts/Overpass-Regular.ttf",
+        "./src/assets/fonts/Overpass-SemiBold.ttf"]
+        }
+      ]
     ]
-   
   }
 }
