--- a/package.json
+++ b/package.json
@@ -3,16 +3,19 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "start": "expo start --dev-client",
-    "android": "expo run:android",
+    "start": "expo start --tunnel",
+    "android": "expo run:android --device",
     "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
     "@expo-google-fonts/overpass": "^0.2.3",
+    "@react-native-async-storage/async-storage": "^1.23.1",
+    "@react-navigation/bottom-tabs": "^6.5.20",
     "@react-navigation/native": "^6.1.10",
     "@react-navigation/native-stack": "^6.9.18",
     "@react-navigation/stack": "^6.3.21",
+    "axios": "^1.6.8",
     "expo": "~50.0.5",
     "expo-font": "~11.10.3",
     "expo-splash-screen": "^0.26.4",
